:fire: styles Updates Css Bootsrap styles overrided

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
             <ul class="navbar-nav gap-5">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+                <a class="nav-link nav-custom " aria-current="page" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link nav-custom" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link nav-custom" href="#">Contact</a>
               </li>
             </ul>
           </div>
@@ -71,11 +71,11 @@
         <div class="container-fluid">
           <div class="row ">
             <div class=" d-flex flex-column gap-4">
-              <h1 class="text-start deskt ms-4 mt-5">
+              <h1 class="text-start custom-margen  ">
                 Hi, I'm <span class="text-primary">Jeysson.</span> <br />Glad to see you here!
                 
               </h1>
-              <p class="text-start ms-4">
+              <p class="custom-margen" >
                 I’m a software developer! I can help you build a product ,
                 feature or website Look through some of my work and experience!
                 If you like what you see and have a project you need coded,
@@ -83,27 +83,27 @@
               </p>
             </div>
           </div>
-          <div class="row gap-4 mt-4">
-            <a class="ms-4 text-decoration-none" href="#">LET'S CONNECT</a>
+          <div class="row gap-4  ">
+            <a class="custom-margen  text-decoration-none" href="#">LET'S CONNECT</a>
             <div class="column">
-                <ul class="d-flex flex-row   gap-5 "  id="icons">
+                <ul class="d-flex custom-margen flex-row gap-4  "  id="icons">
                     <li class="list-group-item" >
                       <a  href="#">
                         <img src="./images/twitter.svg" alt="twitter-logo" />
                       </a>
                     </li>
                     <li class="list-group-item" >
-                      <a href="#"
+                      <a  href="#"
                         ><img src="./images/Linkedin icon.svg" alt="linkedin-logo"
                       /></a>
                     </li>
                     <li class="list-group-item">
-                      <a href="#"
+                      <a  href="#"
                         ><img src="./images/medium.svg" alt="medium-logo"
                       /></a>
                     </li>
                     <li class="list-group-item">
-                      <a href="#"
+                      <a  href="#"
                         ><img src="./images/github.svg" alt="github-logo"
                       /></a>
                     </li>
