--- a/index.html
+++ b/index.html
@@ -8,29 +8,7 @@
     <title>Bootstrap Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
+     </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-white p-2">
@@ -121,27 +99,27 @@
         </div>
       </section>
       <section id="works">
-        <div class="container-fluid d-flex justify-content-center">
-            <div class="card mt-5 " style="width: 35rem;">
-                <img src="./images/Snapshoot Portfolio.png" class="card-img-top" alt="...">
-                <div class="card-body">
+        <div  class="container-fluid d-flex   justify-content-center  " >
+            <div  class="card mt-5 " >
+                <img  class="p-4" src="./images/Snapshoot Portfolio.png" class="card-img-top" alt="...">
+                <div class="card-body p-4">
                     <h3 class="fs-1 fw-bold">Tonic</h3>
-                    <ul class="d-flex flex-row justify-content-start gap-3 p-1 fs-3 ">
+                    <ul class="d-flex flex-row justify-content-start gap-3 p-1 ms-0 fs-3 ">
                         <li class="list-group-item fw-bold">Canopi</li>
                         <li class="list-group-item" ><img src="./images/bullet.svg" alt="counter" /></li>
                         <li class="list-group-item text-black-50">Backend dev</li>
                         <li class="list-group-item"><img src="./images/bullet.svg" alt="counter" /></li>
                         <li class="list-group-item text-black-50">2015</li>
                     </ul>
-                  <p class="card-text ms-2">A daily selection of privately personalized reads; no accounts or
+                  <p class="card-text ms-2 mb-4">A daily selection of privately personalized reads; no accounts or
                     sign-ups required.</p>
-                    <ul class="d-flex flex-row 
+                    <ul class="d-flex flex-row gap-3  p-1 ms-0 fs-5  
                     ">
-                        <li class="list-group-item">HTML</li>
-                        <li class="list-group-item">CSS</li>
-                        <li class="list-group-item">JAVASCRIPT</li>
+                        <li class="list-group-item li-font list-group-item-info badge rounded-pill p-3">HTML</li>
+                        <li class="list-group-item list-group-item-info badge rounded-pill p-3">CSS</li>
+                        <li class="list-group-item list-group-item-info badge rounded-pill p-3">JAVASCRIPT</li>
                     </ul>
-                    <a class="btn btn-primary" href="#" role="button">Link</a>
+                    <a class="btn btn-primary p-2  mt-3 mb-3 w-50" href="#" role="button">See Project</a>
                 </div>
               </div>
         </div>
